fix overflow

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ html,
 body {
   position: relative;
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
